simulator/src/css/main.stylesheet.css
/* ... */
.content-table tbody tr {
    text-align: center;
    display: flex;
    margin-bottom: 4px;
}

.content-table tbody {
    display: table-row-group;
    overflow: auto !important;
    margin-left: 52px;
}

.output {
    cursor: pointer;
}

/*! combinationalAnalysis dialog styling end here */

#setTestbenchData input {
    border: 1px solid white;
    background: transparent;
    text-align: center;
    font: inherit;
    color: white;
}

#setTestbenchData p {
    font: inherit;
    color: white;
}

/** openProjectDialog styling starts here */

#openProjectDialog {
    display: grid;
    /* grid-template-columns: 1fr 1fr 1fr; */
    /* grid-gap: 0 10px; */
    align-items: center;
}

#openProjectDialog > label {
    margin: 4px;
    padding: 10px;
    background: transparent;
    border-radius: 1px;
    width: 100%;
}

/*! openProjectDialog styling ends here */

#insertSubcircuitDialog {
    display: block;
    padding-bottom: 0;
    overflow: visible;
}

#insertSubcircuitcontent p {
  color: white;
  font-size: 16px;
}

#insertSubcircuitcontent a {
  color: white;
  margin-bottom: 7px;
} 

#insertSubcircuitDialog > p {
    margin-bottom: 0;
}

#insertSubcircuitDialog > label {
    height: 30px;
    border-radius: 3px;
    margin: 0 5px;
    margin-bottom: 4px;
    justify-content: center;
    padding-left: 10px;
}

#miniMap {
    position: fixed;
    z-index: 3;
    bottom: 20px;
    right: 40px;
    overflow-y: scroll;
    opacity: 0.5;
    overflow: hidden;
    border: none;
}

.disable::after {
    content: "";
    position: absolute;
    height: 100%;
    width: 100%;
    cursor: not-allowed;
    left: 0;
}

#bitconverterprompt {
    text-align: center;
    font: inherit;
    border: none;
    margin-top: 15px;
    padding: 0;
}

#bitconverterprompt input {
    background: transparent;
    border: none;
    outline: none;
    text-align: center;
    font: inherit;
}

#bitconverterprompt input:focus {
    border: none;
}

.ui-dialog .ui-dialog-buttonpane button {
    margin-left: 0.4em;
}

.ui-dialog-titlebar-close:hover {
    border: none;
}

.radio-green {
    background: #42b983;
}

.search-input {
    margin: 0 10px;
    padding: 3px 10px;
    width: 90%;
    border-radius: 13px;
    margin-bottom: 10px;
    background: transparent !important;
}

.search-input:focus {
    outline: none !important;
}

.search-close {
    position: absolute;
    right: 19px;
    top: 6px;
    cursor: pointer;
    display: none;
}

.search-results {
    display: none;
    padding: 15px;
    transition: all 0.5s ease;
    max-height: 340px;
    overflow-y: scroll;
    padding-right: 0;
}

.search-results div {
    border-radius: 3px;
}

.zoom-slider {
    color: white;
    font-size: 20px;
}

.zoom-slider-increment {
    position: relative;
    bottom: 0.3rem;
}
.zoom-slider-decrement {
    position: relative;
    bottom: 0.4rem;
}

.custom-range {
    width: 80px;
}
.custom-range::-moz-range-track {
    height: 1px;
}

.custom-range::-moz-range-thumb {
    width: 10px;
    height: 10px;
    background-color: white;
    border: 0;
    border-radius: 50%;
    cursor: pointer;
}
.custom-range:focus::-moz-range-thumb {
    box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(75, 86, 99, 0.25);
}

input[type="range"] {
    -webkit-appearance: none;
}

input[type="range"]::-webkit-slider-runnable-track {
    height: 1px;
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: 10px;
    height: 10px;
    background-color: white;
    border: 0;
    border-radius: 50%;
    cursor: pointer;
}

.draggable-panel-css .minimize {
    position: absolute;
    right: 15px;
    cursor: pointer;
}

.panel-button-icon {
    cursor: pointer;
}

.panel-button {
    cursor: pointer;
    padding: 2px;
}

.draggable-panel-css .maximize {
    position: absolute;
    right: 15px;
    cursor: pointer;
}

.maximize {
    display: none;
}

.ce-hidden,
.prop-hidden {
    font-weight: bold;
    padding: 10px;
    font-size: 16px;
    text-transform: uppercase;
    border-radius: 5px;
}

.largeButton.btn {
    width: 100%;
    margin-bottom: 5px;
    margin-left: 0 !important;
}

.objectPropertyAttributeChecked {
    margin-left: 0 !important;
}

#exitViewBtn {
    position: fixed;
    z-index: 1000000000;
    right: 2%;
    top: 3%;
    box-shadow: 0px 0px 10Xpx #4545457f;
    padding: 10px 15px;
    border-radius: 5px;
}

.panel-drag {
    cursor: move;
    opacity: 0.6;
    /* display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
  padding: 6px 0;
  width: 1px; */
}

.ce-hidden,
.prop-hidden {
    cursor: move;
}

#canvasArea,
#backgroundArea,
#simulationArea,
canvas {
    /* cursor: wait !important; */
}

/** Color them dialog styles starts here*/

.ui-dialog[aria-describedby="colorThemesDialog"] {
    min-width: 760px;
    user-select: none;
}

.colorThemesDialog {
    height: 390px !important;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    overflow-y: auto;
    margin-top: 10px;
    border: 1px solid white !important;
}

.colorThemesDialog input {
    margin: 15px;
}

.colorThemesDialog label {
    margin-bottom: 0;
}

.theme {
    color: white;
    width: 202.5px;
    line-height: 30px;
    user-select: none;
    margin: 15px 0;
    border-radius: 1.5px;
    transition: all 0.1s ease-out;
    position: relative;
    overflow-x: hidden;
    height: 154px;
    margin: auto;
}

.themeNameBox {
    display: block;
    width: 100%;
    cursor: pointer;
}

.themeSel {
    background: transparent;
    display: block;
    width: 100%;
    height: 100%;
    position: absolute;
}

/*! Color them dialog styles ends here*/

/*! Custom Color theme dialog styles starts here*/

.ui-dialog[aria-describedby="CustomColorThemesDialog"] {
    min-width: 760px;
    user-select: none;
}

#CustomColorThemesDialog {
    height: 400px !important;
    background: none;
    overflow: auto;
}
/* ... */

